--- a/app/views/practices/_form.html.haml
+++ b/app/views/practices/_form.html.haml
@@ -3,4 +3,4 @@
     = error_messages_for :practice
   %h1= f.text_field :title
   .practice= f.text_area :description
-  .save= f.submit '保存'
+  .save= f.submit
