--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title 256 INTERNS
+    %title= t('256interns')
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -11,12 +11,12 @@
         %ul
           - if current_user
             %li.user_icon= image_tag current_user.icon_url
-            %li= link_to 'ユーザー', users_path
-            %li= link_to 'プラクティス', practices_path
-            %li= link_to 'ログアウト', logout_path
+            %li= link_to t('users'), users_path
+            %li= link_to t('practices'), practices_path
+            %li= link_to t('logout'), logout_path
           - else
-            %li= link_to 'ログイン', auth_at_provider_path(:provider => :github)
-          %li= link_to 'スタート', root_path
+            %li= link_to t('login'), auth_at_provider_path(provider: :github)
+          %li= link_to t('start'), root_path
       %nav#time
     #content
       = yield
