--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,21 +1,15 @@
-%h1 Listing users
-
+%h1= t('listing_users')
 %table
   %tr
     %th Username
     %th Icon
     %th
     %th
-    %th
-
   - @users.each do |user|
     %tr
-      %td= user.username
+      %td= link_to user.username, user
       %td= image_tag user.icon_url
-      %td= link_to 'Show', user
-      %td= link_to 'Edit', edit_user_path(user)
-      %td= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete
-
+      %td= link_to t('edit'), edit_user_path(user)
+      %td= link_to t('destroy'), user, confirm: t('are_you_sure'), method: :delete
 %br
-
-= link_to 'New User', new_user_path
+= link_to t('new_user'), new_user_path
