--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,5 @@
 %p
-  %b Title:
-  = @practice.title
-%p
-  %b Description:
-  = @practice.description
-= link_to t('edit'), edit_practice_path(@practice)
-= link_to t('back'), practices_path
+  %b Name:
+  = @user.name
+= link_to t('edit'), edit_user_path(@user)
+= link_to t('back'), users_path
