--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,4 @@
 %h1= t('256interns')
 %nav#menu
   %ul
-    %li= link_to t('new_intern'), 'https://docs.google.com/a/fjord.jp/spreadsheet/viewform?formkey=dFN3ZWlaQ2xTZktDMldSaEE1UlVLZVE6MQ'
-    %li= link_to t('continue'), auth_at_provider_path(provider: :github)
+    %li= link_to t('new_intern'), 'http://intern-fantasy.herokuapp.com'
