--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,13 +10,15 @@
       %nav#menu
         %ul
           - if current_user
-            %li.user_icon= image_tag current_user.icon_url
+            %li.user_icon= image_tag current_user
             %li= link_to t('users'), users_path
             %li= link_to t('practices'), practices_path
             %li= link_to t('logout'), logout_path
           - else
-            %li= link_to t('login'), auth_at_provider_path(provider: :github)
-          %li= link_to t('start'), root_path
+            %li= link_to t('sign_up'), new_user_path
+            %li= link_to t('login'), login_path
       %nav#time
+    %p#notice= notice
+    %p#alert= alert
     #content
       = yield
