--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
 %h1= t('256interns')
 %nav#menu
   %ul
-    %li= link_to t('new_intern'), 'http://intern-fantasy.herokuapp.com'
+    %li= link_to t('enter_for_intern'), 'http://intern-fantasy.herokuapp.com'
