Change rendering method

--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -1,4 +1,5 @@
 %h1= @practice.title
-.practice= simple_format @practice.description
+- if @practice.description.present?
+  .practice= simple_format @practice.rendering
 .edit= link_to t('edit'), edit_practice_path(@practice)
 .delete= link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete
