--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,12 +12,13 @@
           - if current_user
             %li= current_user.login_name
             %li= link_to t('users'), users_path
-            %li= link_to t('practices'), practices_path
             %li= link_to t('logout'), logout_path
           - else
             %li= link_to t('sign_up'), new_user_path
             %li= link_to t('sign_in'), login_path
-        %h1= t('256interns')
+          %li= link_to t('practices'), practices_path
+          %li= link_to t('listing_users'), users_path
+        %h1= link_to t('256interns'), root_path
         - if notice
           .alert.alert-info= notice
         - if alert
