--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,10 +1,10 @@
 = simple_form_for user do |f|
   - if user.errors.any?
     = error_messages_for :user
-  = f.input :login_name, hint: false
-  = f.input :name, hint: false
-  = f.input :name_kana, hint: false
-  = f.input :email, hint: false
-  = f.input :password, hint: false
-  = f.input :password_confirmation, hint: false
+  = f.input :login_name, label: false, hint: false, placeholder: t('helpers.label.user.login_name')
+  = f.input :name, label: false, hint: false, placeholder: t('helpers.label.user.name')
+  = f.input :name_kana, label: false, hint: false, placeholder: t('helpers.label.user.name_kana')
+  = f.input :email, label: false, hint: false, placeholder: t('helpers.label.user.email')
+  = f.input :password, label: false, hint: false, placeholder: t('helpers.label.user.password')
+  = f.input :password_confirmation, label: false, hint: false, placeholder: t('helpers.label.user.password_confirmation')
   = f.submit nil, class: 'btn btn-large'
