--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,6 @@
 %h1= t('listing_users')
-%ul
+%table(width="100%")
   - @users.each do |user|
-    %li
-      .icon= gravatar_tag user, size: 100
-      .name= user.full_name
+    %tr
+      %td.icon= gravatar_tag user, size: 100
+      %td.name= user.full_name
