--- a/app/views/practices/index.html.haml
+++ b/app/views/practices/index.html.haml
@@ -1,8 +1,5 @@
 %h1= t('practices')
-%table(width="100%" class="table table-striped table-bordered table-condensed")
-  %tr
-    %th= t('helpers.label.practice.name')
-    %th= t('helpers.label.learning.status')
+%table(width="100%" class="table table-striped")
   - @practices.each do |practice|
     %tr
       %td.title= link_to practice.title, practice
