--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -1,4 +1,5 @@
 %h1= @practice.title
+%p= @practice.for
 - if @practice.description?
   .practice= simple_format rendering(@practice.description)
 = link_to t('edit'), edit_practice_path(@practice), class: 'btn'
