--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -6,6 +6,9 @@ body.practices_index
     td.title
     td.status
       width: 10%
+    td.handle
+      font-size: 20px
+      cursor: row-resize
 
 body.users_index
   table
