--- a/app/views/application/_nav.html.haml
+++ b/app/views/application/_nav.html.haml
@@ -6,27 +6,27 @@
         = current_user.login_name
   %li.dropdown{controller_name == 'practices' ? { class: 'active' } : {}}
     %a.dropdown-toggle(href="#" data-toggle="dropdown")
-      %i(class="icon-tasks")
+      %i.icon-tasks
       = t('practices')
-      %b(class="caret")
+      %b.caret
     %ul.dropdown-menu
       %li= link_to t('listing_practices'), practices_path
       %li= link_to t('new_practice'), new_practice_path
   %li{controller_name == 'users' ? { class: 'active' } : {}}
     = link_to users_path do
-      %i(class="icon-user")
-      = t('listing_users') 
+      %i.icon-user
+      = t('listing_users')
   - if current_user
     %li
       = link_to logout_path do
-        %i(class="icon-off")
+        %i.icon-off
         = t('logout')
   - else
     %li
       = link_to login_path do
-        %i(class="icon-off")
+        %i.icon-off
         = t('sign_in')
     %li
       = link_to new_user_path do
-        %i(class="icon-off")
-        = t('sign_up') 
+        %i.icon-off
+        = t('sign_up')
