--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -1,17 +1,15 @@
 body.practices_index
   table
-    width: 100%
     td
       vertical-align: middle
     td.title
     td.status
-      width: 10%
+      width: 200px
     td.handle
+      width: 40px
       font-size: 20px
-      cursor: row-resize
+      cursor: move
 
 body.users_index
   table
-    width: 100%
     td.icon
-      width: 100px
