--- a/app/views/practices/_form.html.haml
+++ b/app/views/practices/_form.html.haml
@@ -3,5 +3,6 @@
     = error_messages_for :practice
   = f.input :title, input_html: { class: 'input-block-level' }
   = f.input :description, input_html: { class: 'input-block-level', rows: 20 }
+  = f.input :goal, input_html: { class: 'input-block-level', rows: 10 }
   = f.input :target, collection: Practice.targets_for_select
   = f.submit nil, class: 'btn btn-primary'
