--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -1,6 +1,5 @@
 %h1= @practice.title
-%p= @practice.for
-- if @practice.description?
-  .practice= simple_format rendering(@practice.description)
-= link_to t('edit'), edit_practice_path(@practice), class: 'btn'
+%span.label.label-info= t(@practice.target)
+.practice= simple_format rendering(@practice.description)
+= link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
 = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
