--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,10 +2,13 @@
   - if user.errors.any?
     = error_messages_for :user
   = f.input :login_name, hint: false, placeholder: t('helpers.label.user.login_name')
+  = f.input :email, hint: false, placeholder: t('helpers.label.user.email')
   = f.input :first_name, hint: false, placeholder: t('helpers.label.user.first_name')
   = f.input :last_name, hint: false, placeholder: t('helpers.label.user.last_name')
-  = f.input :email, hint: false, placeholder: t('helpers.label.user.email')
+  = f.input :twitter_url, hint: false, placeholder: t('helpers.label.user.twitter_url'), input_html: { class: 'span6' }
+  = f.input :facebook_url, hint: false, placeholder: t('helpers.label.user.facebook_url'), input_html: { class: 'span6' }
+  = f.input :blog_url, hint: false, placeholder: t('helpers.label.user.blog_url'), input_html: { class: 'span6' }
   = f.input :password, hint: false, placeholder: t('helpers.label.user.password')
   = f.input :password_confirmation, hint: false, placeholder: t('helpers.label.user.password_confirmation')
   = f.input :job, collection: User.jobs_for_select
-  = f.submit nil, class: 'btn btn-large'
+  = f.submit nil, class: 'btn btn-primary'
