Add design in home

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -17,3 +17,8 @@ body.users_index
 #footer
   text-align: center
   margin: 20px
+
+#header_img
+  background-image: image-url("hero.jpg")
+  padding: 150px
+  color: white
