--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,5 @@
-%h2.lead.text-center Web系スタートアップでインターンしてプログラム・デザインを身につけよう。
+#header_img
+  %h2.lead.text-center Web系スタートアップでインターンしてプログラム・デザインを身につけよう。
 %h2.text-center= t('how_256interns_works')
 %p インターンシップとは、応募者は就業体験と職業訓練を得、企業は見込み社員と労働力を得る仕組みです。
 ２５６インターンではお金を払って行くスクールとお金を貰ってやるアルバイトの中間地点として、１週間毎に学習と作業を交換することにより、誰もお金を払わないインターンシップを実現します。
@@ -6,12 +7,15 @@
 %h2.text-center 256インターンの仕組み
 .row
   .span4
+    = image_tag 'choose.jpg'
     %h3 学習週
     %p １週間自分のペースで学習する。
   .span4
+    = image_tag 'experience.jpg'
     %h3 作業週
     %p 次の１週間Webサービスを作る作業をする。
   .span4
+    = image_tag 'grow.jpg'
     %h3 学習と作業の交換
     %p それを交互に繰り返す。
 %h2.text-center ローカルとリモート
