--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -10,5 +10,5 @@
   = f.input :blog_url, hint: false, placeholder: t('helpers.label.user.blog_url'), input_html: { class: 'span6' }
   = f.input :password, hint: false, placeholder: t('helpers.label.user.password')
   = f.input :password_confirmation, hint: false, placeholder: t('helpers.label.user.password_confirmation')
-  = f.input :job, collection: User.jobs_for_select
+  = f.input :job, collection: User.jobs_for_select, as: :radio_buttons
   = f.submit nil, class: 'btn btn-primary'
