--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -1,5 +1,8 @@
 %h1= @practice.title
 %span.label.label-info= t(@practice.target)
+%h2= t('helpers.label.practice.description')
 .practice= simple_format rendering(@practice.description)
+%h2= t('helpers.label.practice.goal')
+.goal= simple_format rendering(@practice.goal)
 = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
 = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
