Add gravater icon to users#show and practices#show

--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -6,3 +6,9 @@
 .goal= simple_format rendering(@practice.goal)
 = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
 = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
+
+%h3= t('completed_users')
+- @practice.completed_users.each do |user|
+  .icon
+    = link_to user do
+      = gravatar_tag user, size: 50
