--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -20,5 +20,5 @@
   - @user.completed_practices.each do |practice|
     %li
       .title= link_to practice.title, practice
-- if current_user
+- if current_user == @user
   = link_to t('edit'), edit_user_path(current_user), class: 'btn btn-primary'
