Add completed percentage

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,5 @@
       #footer
         ©
         = link_to 'FJORD, LLC', 'http://fjord.jp'
-    = render 'fork_me'
+    - if controller_name == 'home'
+      = render 'fork_me'
