--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,9 +16,15 @@
     %dt= t('helpers.label.user.blog_url')
     %dd= link_to @user.blog_url
 %h3= t('completed_practices')
-%ul
-  - @user.completed_practices.each do |practice|
-    %li
-      .title= link_to practice.title, practice
+.row
+  .span11
+    .progress
+      .bar(style="width: #{@user.completed_percentage}%;")
+  .span1
+    = number_to_percentage @user.completed_percentage, precision: 0
+-#%ul
+-#  - @user.completed_practices.each do |practice|
+-#    %li
+-#      .title= link_to practice.title, practice
 - if current_user == @user
   = link_to t('edit'), edit_user_path(current_user), class: 'btn btn-primary'
