--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,9 +22,9 @@
       .bar(style="width: #{@user.completed_percentage}%;")
   .span1
     = number_to_percentage @user.completed_percentage, precision: 0
--#%ul
--#  - @user.completed_practices.each do |practice|
--#    %li
--#      .title= link_to practice.title, practice
+%ul
+  - @user.completed_practices.each do |practice|
+    %li
+      .title= link_to practice.title, practice
 - if current_user == @user
   = link_to t('edit'), edit_user_path(current_user), class: 'btn btn-primary'
