Fix home template

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -20,5 +20,5 @@ body.users_index
 
 #header_img
   background-image: image-url("hero.jpg")
-  padding: 150px
+  padding: 150px 20px
   color: white
