--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -1,3 +1,4 @@
+- title @practice.title
 %h1= @practice.title
 %span.label.label-info= t(@practice.target)
 %h2= t('helpers.label.practice.description')
