--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -5,7 +5,8 @@
 .practice= simple_format rendering(@practice.description)
 %h2= t('helpers.label.practice.goal')
 .goal= simple_format rendering(@practice.goal)
-= @practice.learning_status(current_user.id)
+- if current_user.present?
+  = @practice.learning_status(current_user.id)
 = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
 = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
 
