--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,3 +8,10 @@
           = gravatar_tag user, size: 100
       %td.login_name= link_to user.login_name, user
       %td.full_name= link_to user.full_name, user
+    - if current_user.present? and user.active_learnings.present?
+      %tr
+        %th= t('active_practices')
+        %td.active_practice
+          %ul
+            - user.active_learnings.each do |learning|
+              %li= link_to learning.practice.title, learning.practice
