--- a/app/views/practices/show.html.haml
+++ b/app/views/practices/show.html.haml
@@ -12,6 +12,6 @@
 
 %h3= t('completed_users')
 - @practice.completed_users.each do |user|
-  .icon
+  .icon.completed-users
     = link_to user do
       = gravatar_tag user, size: 50
