Add new design in top page

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -1,3 +1,6 @@
+$black: #031f29
+$white: white
+
 body.practices_index
   table
     td
@@ -14,12 +17,78 @@ body.users_index
   table
     td.icon
       width: 120px
+.home_index
+  color: $white
+  background: $black
+  
+  a
+    color: $white
+    text-decoration: underline
 
-#footer
-  text-align: center
-  margin: 20px
+  p
+    margin: 0 0 18px
 
-#header_img
-  background-image: image-url("hero.jpg")
-  padding: 150px 20px
-  color: white
+  ul.nav
+    margin-top: 14px
+
+  #header
+    background: $white
+    color: $black
+    a
+      color: $black
+      text-decoration: none
+  
+  #footer
+    background: $white
+    text-align: center
+    color: $black
+    padding: 20px
+    a
+      color: $black
+      text-decoration: none
+
+  article
+    text-align: center
+    margin: 40px
+
+  #header_img
+    img
+      width: 100%
+  
+  .intern_image
+    text-align: center
+  
+  #what_is_intern
+    h2
+      margin: 30px 0px
+
+  #application_for_intern
+
+  #three_pictures
+    text-align: center
+
+  #three_pictures h3
+    font-size: 20px
+
+  #local_and_remote
+    h2
+      margin: 40px
+
+    .intern_image
+      margin: 40px
+
+  #company
+    text-align: center
+    h2 
+      margin: 40px
+
+    .span3
+      .name
+        font-size: 14px
+        margin: 10px
+
+      a
+        text-decoration: none
+
+  .inquiry
+    margin: 40px
