add switch to show/hide completed practice

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -2,6 +2,8 @@ $black: #031f29
 $white: white
 
 body.practices_index
+  #display-switch
+    float: right
   table
     td
       vertical-align: middle
@@ -20,7 +22,7 @@ body.users_index
 .home_index
   color: $white
   background: $black
-  
+
   a
     color: $white
     text-decoration: underline
@@ -37,7 +39,7 @@ body.users_index
     a
       color: $black
       text-decoration: none
-  
+
   #footer
     background: $white
     text-align: center
@@ -54,10 +56,10 @@ body.users_index
   #header_img
     img
       width: 100%
-  
+
   .intern_image
     text-align: center
-  
+
   #what_is_intern
     h2
       margin: 30px 0px
@@ -79,7 +81,7 @@ body.users_index
 
   #company
     text-align: center
-    h2 
+    h2
       margin: 40px
 
     .span3
