--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -15,6 +15,10 @@ body.practices_index
       font-size: 20px
       cursor: move
 
+#footer
+  padding: 20px
+  text-align: center
+
 body.users_index
   table
     td.icon
