Fix link to application page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -26,7 +26,7 @@
           %br/
           １週間毎に学習と作業を交換することにより、誰もお金を払わないインターンシップを実現します。
       %article#application_for_intern
-        = link_to 'http://intern-fantasy.herokuapp.com' do
+        = link_to application_path do
           = image_tag '256intern_07.png'
       #three_pictures
         .row
