link to company's website on /companies

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -8,4 +8,4 @@
     %tr
       %td= link_to company.name, company
       %td= company.description
-      %td= company.website
+      %td= link_to company.website, company.website
