Add esm to companies

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -54,16 +54,18 @@
       #company
         %h2 参加企業
         .row
-          .span3
-          .span3.fjord
+          .span4.fjord
             = link_to 'http://fjord.jp' do
               = image_tag '256intern_24.png'
               .name FJORD, LLC
-          .span3.root
+          .span4.root
             = link_to 'http://ic-root.com/' do
               = image_tag '256intern_26.png'
               .name root inc.
-          .span3
+          .span4.esm
+            = link_to 'http://www.esm.co.jp' do
+              = image_tag 'esm_logo.png'
+              .name esm inc.
         %p
           ２５６インターンでは参加企業を募集しています。当サービスを使えば、プログラマーがいなくて教える事ができない企業や、
           %br/
