Fix company name

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -65,7 +65,7 @@
           .span4.esm
             = link_to 'http://www.esm.co.jp' do
               = image_tag 'esm_logo.png'
-              .name esm inc.
+              .name 永和システムマネジメント
         %p
           ２５６インターンでは参加企業を募集しています。当サービスを使えば、プログラマーがいなくて教える事ができない企業や、
           %br/
