Add description form

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,6 +5,7 @@
   = f.input :email, hint: false, placeholder: t('helpers.label.user.email')
   = f.input :first_name, hint: false, placeholder: t('helpers.label.user.first_name')
   = f.input :last_name, hint: false, placeholder: t('helpers.label.user.last_name')
+  = f.input :description, hint: false, placeholder: t('helpers.label.user.description')
   = f.input :twitter_url, hint: false, placeholder: t('helpers.label.user.twitter_url'), input_html: { class: 'span6' }
   = f.input :facebook_url, hint: false, placeholder: t('helpers.label.user.facebook_url'), input_html: { class: 'span6' }
   = f.input :blog_url, hint: false, placeholder: t('helpers.label.user.blog_url'), input_html: { class: 'span6' }
