--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,6 +7,8 @@
   %dd= @user.full_name
   %dt= t('helpers.label.user.job')
   %dd= t(@user.job)
+  %dt= t('helpers.label.user.description')
+  %dd= simple_format @user.description
   - if @user.twitter_url?
     %dt= t('helpers.label.user.twitter')
     %dd= link_to '@' + @user.twitter_id, 'https://twitter.com/' + @user.twitter_id
